# edmund

./: .gitignore  README.md  build.sh  edmund.code-workspace  edmund.ino  gollum.sh  hardware.cpp  hardware.h  install_cli.sh  install_dependencies.sh  player.h  upload.sh
edmund/: CMakeLists.txt  bootscreen.h  config.mk  configScreen.h  edmund.code-workspace  edmund.h  edmund.ino  edmund.sln  edmund.vcxproj  font.h  game.cpp  game.h  hardware.cpp  hardware.h  mainscreen.cpp  mainscreen.h  player.h  rotary.cpp  rotary.h  screen.h  screenmanager.h  screennmanager.cpp
edmund/src/: edmund.h  game.cpp  game.h  mana.h  model.h  player.h  version.h
edmund/src/hardware/: device.cpp  device.h  hardware.cpp  hardware.h  input_provider.cpp  input_provider.h  lcd_provider.cpp  lcd_provider.h  mcp_provider.cpp  mcp_provider.h  rotary.cpp  rotary.h
edmund/src/hardware/input/: input_api.h  input_control.cpp  input_control.h  input_device.cpp  input_device.h  input_provider.cpp  input_provider.h  input_reader.cpp  input_reader.h  inputapi.cpp  inputapi.h  mcp_provider.cpp  mcp_provider.h  rotary.h
edmund/src/hardware/output/: outputapi.h  pcd8544api.h  pcd8544device.cpp  pcd8544device.h
edmund/src/ui/: boot_screen.h  bootscreen.h  configScreen.h  config_screen.h  edh_fourplayer_complete.cpp  edh_fourplayer_complete.h  edh_fourplayer_complete_screen.h  edh_fourplayer_simple.h  edh_fourplayer_simple_screen.h  edh_twoplayer_simple.h  edh_twoplayer_simple_screen.h  homemenu_screen.h  mainscreen.cpp  mainscreen.h  screen.h  screen_manager.cpp  screen_manager.h  screenmanager.cpp  screenmanager.h  simple2playeredhscreen.h  simple4playerscreen.h
edmund/src/ui/layouts/: mainscreen_layout.h
edmund/src/ui/resources/: 2playersimple_layout.h  bootscreen_logo.h  edh_fourplayercomplete_layout.h  edh_fourplayersimple_layout.h  edh_twoplayersimple_layout.h  font.h  home_logo.h  mainscreen_layout.h  mana_symbols.h
edmund/test/: CMakeLists.txt  Player_unittest.cpp  game_test.cpp  main_test.cpp  manapool_test.cpp  pcd8544_test.cpp  player_test.cpp
edmund/test/arduino_mock/: CMakeLists.txt
edmund/test/mock/include/: outputmocks.h
resources/home/: config_logo.psd  diag_logo.psd
resources/numeric_font/: numeric_small_font.psd
resources/toSort/: blackmana.PSD  forestBig.PSD  islandBig2.psd  redMana.PSD
scripts/: README.md  abn_install_dev.sh  abn_upload.sh  apply_build_version.sh  apt_install.sh  break.sh  build.sh  build_bin.sh  build_lib.sh  build_run_test.sh  build_test.sh  clean.sh  clean_bin.sh  clean_test.sh  clean_testdep.sh  debug.sh  incremet_build_version.sh  init.sh  init_dev.sh  init_esp_arduino_sdk.sh  install_apt.sh  install_cli.sh  install_dependencies.sh  install_esp_arduino_sdk.sh  install_esp_decoder.sh  install_espressif_toolchain.sh  openserial.sh  purge_test.sh  run_screen.sh  run_serial.sh  run_test.sh  screenrc  startscreen.sh  update_build_version.sh  upload.sh
scripts/env/: README.md  backup_settings.sh  bashrc  debian_p51.config  fix_delete_key_stterm.sh  setup_all.sh  setup_debian.sh  setup_editors.sh  setup_edmund.sh  setup_git.sh  setup_install_webbrowser.sh  setup_locale.sh  setup_snap.sh  setup_sudo.sh  setup_wm.sh  web_install.sh  xinitrc  xresource
scripts/env/vscode/: keybindings.json  settings.json
symbols/: 2Player.psd  fourPlayerLogo.psd  layouAtScale.psd  logo.psd  mainLayout.psd  numeric_7.psd  simple4Player.psd
symbols/home/: 4player_logo.psd  simple4Player.psd  twoPlayerLogo.psd
symbols/layout/: 2Player.psd  4PlayerSimple.psd  mainLayout.psd
symbols/numeric_font/: numeric_small_fonnt.psd
